monads/error.txt
 $ gg
 GHCi, version 8.4.4: http://www.haskell.org/ghc/  :? for help
 Loaded GHCi configuration from /home/john/.ghc/ghci.conf
  λ > :l firstExisting.hs 
  [1 of 1] Compiling Main             ( firstExisting.hs, interpreted )

  firstExisting.hs:6:10: error:
      • No instance for (Semigroup (FirstExisting a))
              arising from the superclasses of an instance declaration
                  • In the instance declaration for ‘Monoid (FirstExisting a)’
                    |
                    6 | instance Monoid (FirstExisting a) where
                      |          ^^^^^^^^^^^^^^^^^^^^^^^^
                      Failed, no modules loaded.

-- test
